style file updates

--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -26,19 +26,19 @@
     }
 }
 
-//font awesome mixin
-@mixin font-awesome() {
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    display: inline-block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    line-height: 1;
-}
-
+//font awesome mixin 
+// Removed due to unsolved bug
+// @mixin font-awesome() {
+//     font-family: "Font Awesome 5 Free";
+//     font-weight: 900;
+//     -moz-osx-font-smoothing: grayscale;
+//     -webkit-font-smoothing: antialiased;
+//     display: inline-block;
+//     font-style: normal;
+//     font-variant: normal;
+//     text-rendering: auto;
+//     line-height: 1;
+// }
 //grid mixin
 @mixin grid() {
     display: grid;
