--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,8 +29,8 @@ html body {
   font-family: "Montserrat", sans-serif;
   font-weight: 200;
   margin: 0;
-  background-color: #041f1f;
-  color: #fff;
+  background-color: #6bebe7;
+  color: #041f1f;
 }
 
 html body h1 {
