--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,4 +1,4 @@
-@import "_palette.theme-alt.scss";
+@import "_palette.scss";
 // unique colors
 $selected: $color05;
 $hover: darken($selected, 5%);
