--- a/styles/styles.css
+++ b/styles/styles.css
@@ -282,7 +282,7 @@ nav ul li.selected:hover {
       grid-template-columns: repeat(7, 1fr);
   -ms-grid-rows: auto;
       grid-template-rows: auto;
-  padding: 0 8rem;
+  padding: 0 8rem 8rem 8rem;
 }
 
 @media only screen and (max-width: 768px) {
@@ -293,7 +293,7 @@ nav ul li.selected:hover {
 
 @media only screen and (max-width: 1200px) {
   .container {
-    padding: 0 1.2rem;
+    padding: 0 1.2rem 1.2rem 1.2rem;
   }
 }
 
