--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -28,7 +28,7 @@ html {
             display: block;
         }
         .col-6-layout {
-            .header {
+            header {
                 color: $accent;
                 font-weight: $weight-bold;
                 font-family: $font-family-02;
