--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,5 +9,6 @@
 @import "_typography.scss"; // TYPOGRAPHY
 @import "_overview.scss"; // MAIN OVERVIEW VIEW
 @import "_navigation.scss"; // NAV
-@import "_layout.scss"; // GRID, FLEX, LAYOUTS
+// @import "_layout.scss"; // GRID, FLEX, LAYOUTS
+@import "_layout-new.scss"; // NEW LAYOUTS ASSIGNMENT 2
 @import "_timeline.scss"; // CALENDAR LIST VIEW
