--- a/styles/_overview.scss
+++ b/styles/_overview.scss
@@ -1,4 +1,3 @@
-@include toggle();
 .divider {
     border-radius: $radius;
     padding: $padding-xs;
@@ -25,4 +24,8 @@
 
 .field {
     padding: $padding-m $clear;
+}
+
+input {
+    display: none;
 }
